redis/00-namespace-and-networkpolicy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redis
  labels:
    canAccessRedisNamespace: "true"
spec:
  finalizers:
  - kubernetes
---
